// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeProductsAndBanners() should correctly handle negative positions and normalize them to 0 1`] = `
Array [
  Object {
    "isBanner": true,
    "link": "/baz",
    "position": 1,
  },
  Object {
    "isBanner": true,
    "link": "/foo",
    "position": "1",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "5055807407625",
      "id": "270115",
      "longdesc": "»The Botanist Islay Dry Gin« ist durch seine Machart und Herkunft in seiner Art einzigartig. Nirgendwo auf der Welt findet man Kräuter und Wildblumen in der Zusammensetzung, wie sie in diesem Gin verwendet werden. Sie alle stammen von der Insel Islay. Durch besonders schonende Destillation schafft der Master Distiller Jim McEwan, es die Essenz der Blüten und Kräuter einzufangen – den Duft und Charakter der wilden Hebrideninsel.
Quecksilberfarben schimmert er im Glas und verzaubert die Sinne mit seinen vielfältigen Nuancen. Sie reichen von süßem Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote bis hin zu Zitronen- und Orangenzeste. Ein ganzer Strauß an Wildblumen findet sich hier im Bukett wieder, wie der Duft von Distelnektar, wilder Minze und Ginster. »The Botanist Islay Dry Gin« duftet nach rauen Küsten und wilder Natur, dennoch ist er vollmundig und weich. Zu Beginn eher kühl, entwickelt er schließlich eine Balance aus Wärme und Komplexität.
Dank der 31 Botanicals, die für seine Herstellung behutsam destilliert werden wird der Gin zu einem komplexen, unverwechselbaren Genuss. Er ist ebenso wild und einzigartig, wie die Insel dessen Seele er in sich trägt. Die Magnum-Flasche betont die Ausstrahlung von Stärke und Freiheit zusätzlich. Ein Must-Have für jede Bar.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "5055807407625",
        "id": "270115",
        "longdesc": "»The Botanist Islay Dry Gin« ist durch seine Machart und Herkunft in seiner Art einzigartig. Nirgendwo auf der Welt findet man Kräuter und Wildblumen in der Zusammensetzung, wie sie in diesem Gin verwendet werden. Sie alle stammen von der Insel Islay. Durch besonders schonende Destillation schafft der Master Distiller Jim McEwan, es die Essenz der Blüten und Kräuter einzufangen – den Duft und Charakter der wilden Hebrideninsel.
Quecksilberfarben schimmert er im Glas und verzaubert die Sinne mit seinen vielfältigen Nuancen. Sie reichen von süßem Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote bis hin zu Zitronen- und Orangenzeste. Ein ganzer Strauß an Wildblumen findet sich hier im Bukett wieder, wie der Duft von Distelnektar, wilder Minze und Ginster. »The Botanist Islay Dry Gin« duftet nach rauen Küsten und wilder Natur, dennoch ist er vollmundig und weich. Zu Beginn eher kühl, entwickelt er schließlich eine Balance aus Wärme und Komplexität.
Dank der 31 Botanicals, die für seine Herstellung behutsam destilliert werden wird der Gin zu einem komplexen, unverwechselbaren Genuss. Er ist ebenso wild und einzigartig, wie die Insel dessen Seele er in sich trägt. Die Magnum-Flasche betont die Ausstrahlung von Stärke und Freiheit zusätzlich. Ein Must-Have für jede Bar.",
        "manufacturer_title": "Bruichladdich Distillery",
        "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270115-the-botanist-gin-1liter.png",
        "price": 74.95,
        "title": "The Botanist Islay Dry Gin in der Magnumflasche 46% vol. 1,5 Literflasche",
        "url": "/the-botanist-islay-dry-gin-46-1-5l-270115.html",
      },
      "manufacturer_title": "Bruichladdich Distillery",
      "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270115-the-botanist-gin-1liter.png",
      "price": 74.95,
      "title": "The Botanist Islay Dry Gin in der Magnumflasche 46% vol. 1,5 Literflasche",
      "url": "/the-botanist-islay-dry-gin-46-1-5l-270115.html",
    },
    "id": "270115",
  },
  Object {
    "isBanner": true,
    "link": "/bar",
    "position": "4",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "5055807400596",
      "id": "270107",
      "longdesc": "In der Farbe von schimmerndem Quecksilber erscheint »The Botanist Islay Dry Gin« wie ein kaum greifbares Mysterium. Seidenweich fließt er über Zunge und Gaumen wie kein anderer Gin. Im Duft ergeben sich vielschichtige Nuancen: süßes Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote, Zitronen- und Orangenzeste, ein Strauß Sommerblumen, Distelnektar, nussiger Ginster, wilde Minze und eine duftende Sommerwiese. Dieser Duft stammt direkt von der wilden Hebrideninsel mit all ihren schroffen Küsten und von Wildblumen und Heidekraut übersäten Moorlandschaften.
An keinem anderen Ort der Welt findet man diese Kräuter in dieser Ursprünglichkeit und Intensität. Master Distiller Jim McEwan wendet in unserer Lomond Pot Still, der weltweit einzigen ihrer Art, die traditionellen Extraktionskünste der großen Destillateure an. So wird langsam und besonders schonend die Essenz der Blüten und Kräuter eingefangen – der Duft und die Seele der wilden Natur Islays.
Am Gaumen vollmundig, weich und anfangs eher kühl entwickelt »The Botanist« eine wunderbare Wärme und Komplexität, die auf eine besonders langsame und schonende Destillation zurückzuführen ist. Ein luxuriöser Genuss, der mit seinen deutlichen Zitrusnoten verzaubert und die einzigartige Kombination aus 31 Botanicals und Gewürzen hervorragend unterstreicht. Die Essenz Islays in einem Gin: wilde Kräuter, Vielschichtigkeit, Komplexität und absolute Freiheit.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "5055807400596",
        "id": "270107",
        "longdesc": "In der Farbe von schimmerndem Quecksilber erscheint »The Botanist Islay Dry Gin« wie ein kaum greifbares Mysterium. Seidenweich fließt er über Zunge und Gaumen wie kein anderer Gin. Im Duft ergeben sich vielschichtige Nuancen: süßes Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote, Zitronen- und Orangenzeste, ein Strauß Sommerblumen, Distelnektar, nussiger Ginster, wilde Minze und eine duftende Sommerwiese. Dieser Duft stammt direkt von der wilden Hebrideninsel mit all ihren schroffen Küsten und von Wildblumen und Heidekraut übersäten Moorlandschaften.
An keinem anderen Ort der Welt findet man diese Kräuter in dieser Ursprünglichkeit und Intensität. Master Distiller Jim McEwan wendet in unserer Lomond Pot Still, der weltweit einzigen ihrer Art, die traditionellen Extraktionskünste der großen Destillateure an. So wird langsam und besonders schonend die Essenz der Blüten und Kräuter eingefangen – der Duft und die Seele der wilden Natur Islays.
Am Gaumen vollmundig, weich und anfangs eher kühl entwickelt »The Botanist« eine wunderbare Wärme und Komplexität, die auf eine besonders langsame und schonende Destillation zurückzuführen ist. Ein luxuriöser Genuss, der mit seinen deutlichen Zitrusnoten verzaubert und die einzigartige Kombination aus 31 Botanicals und Gewürzen hervorragend unterstreicht. Die Essenz Islays in einem Gin: wilde Kräuter, Vielschichtigkeit, Komplexität und absolute Freiheit.",
        "manufacturer_title": "Bruichladdich Distillery",
        "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270107-the-botanist-gin.png",
        "price": 34.95,
        "title": "The Botanist Islay Dry Gin 46% Vol.",
        "url": "/the-botanist-islay-dry-gin-270107.html",
      },
      "manufacturer_title": "Bruichladdich Distillery",
      "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270107-the-botanist-gin.png",
      "price": 34.95,
      "title": "The Botanist Islay Dry Gin 46% Vol.",
      "url": "/the-botanist-islay-dry-gin-270107.html",
    },
    "id": "270107",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "735850483894",
      "id": "470006",
      "longdesc": "Für den Glendalough Wild Botanical Rose Gin werden nur handgelesene und frische Rosenblätter verwendet. Mit seltenen Wildrosen, duftenden \\"Heritage\\" Rosen sowie der alten, preisgekrönten Sorte \\"Damaszener Rose\\", die schon in der Antike angebaut wurde. In Kombination kreieren sie einen natürlich rosafarbenen und ausgesprochen blumigen Gin. Auch nach der Destillation wird er mit noch mehr Rosenblüten verfeinert, die nicht nur den Farbton, sondern auch die wundervollen Aromen zu intensivieren. Anfangs zeigt dieser Rose Gin zunächst sehr weiche Noten von Wacholder und frischen Rosen, anschließend eine großartige Kombination aus sanften und süßen Gewürzen, mildem Rosenwasser und einem Hauch Zitrus. Der erste traumhafte Eindruck mündet in einem langen Finish von Rosenblättern und rosa Pfeffer. Am besten lässt sich dieser Gin pur on the Rocks genießen.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "735850483894",
        "id": "470006",
        "longdesc": "Für den Glendalough Wild Botanical Rose Gin werden nur handgelesene und frische Rosenblätter verwendet. Mit seltenen Wildrosen, duftenden \\"Heritage\\" Rosen sowie der alten, preisgekrönten Sorte \\"Damaszener Rose\\", die schon in der Antike angebaut wurde. In Kombination kreieren sie einen natürlich rosafarbenen und ausgesprochen blumigen Gin. Auch nach der Destillation wird er mit noch mehr Rosenblüten verfeinert, die nicht nur den Farbton, sondern auch die wundervollen Aromen zu intensivieren. Anfangs zeigt dieser Rose Gin zunächst sehr weiche Noten von Wacholder und frischen Rosen, anschließend eine großartige Kombination aus sanften und süßen Gewürzen, mildem Rosenwasser und einem Hauch Zitrus. Der erste traumhafte Eindruck mündet in einem langen Finish von Rosenblättern und rosa Pfeffer. Am besten lässt sich dieser Gin pur on the Rocks genießen.",
        "manufacturer_title": "Glendalough",
        "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470006-glendalough-rose.png",
        "price": 27.95,
        "title": "Glendalough Wild Rose Gin 37,5% vol",
        "url": "/glendalough-rose-gin-470006.html",
      },
      "manufacturer_title": "Glendalough",
      "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470006-glendalough-rose.png",
      "price": 27.95,
      "title": "Glendalough Wild Rose Gin 37,5% vol",
      "url": "/glendalough-rose-gin-470006.html",
    },
    "id": "470006",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "735850138428",
      "id": "470005",
      "longdesc": "Das Set der exquisiten Glendalough Seasonal Gins zeigt Ihnen den ganz besonderen Zauber aller vier Jahreszeiten an den Wicklow Mountains in Irland. Die saisonalen und charakteristischen Kräuter und Früchte werden für jeden der vier Gins handgepflückt.
Im Spring Gin zeigen Süßdolde, Schlüsselblume, Wasserminze und Sauerampfer, wie das Jahr beginnt. Summer Gin ist wie eine sommerliche Wiese und enthält frühe Fruchtaromen von Holunderblüte, Wildrose, Kleeblüte, Wilder Himbeere, Brombeerblättern und Margarite. Im Herbst betreten reife, wilde Früchte und Beeren die Aromenpalette und so nimmt der Autumn Gin eine ganz eigene Fruchtigkeit von Holzapfel, Brombeeren, Holunder- und Vogelbeeren sowie Hagebutten und Mädesüßblüten an. Im ruhigen und besinnlichen Winter werden die Aromen dann würzig und kräftig mit Holzapfel, Hagebutte, Weißdorn- und Schlehbeeren sowie Douglasie. Eine einmalige Komposition von vier außergewöhnlichen Gins.
Auch in der Herstellung zeichnet sich die besondere Qualität der Glendalough Seasonal Gins ab: die Botanicals werden, anders als allgemein üblich, im frischen Zustand destilliert. Ohne Automatisierung werden nur geringe Chargen abgefüllt und so ist jeder Brennvorgang, wie der Allererste.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "735850138428",
        "id": "470005",
        "longdesc": "Das Set der exquisiten Glendalough Seasonal Gins zeigt Ihnen den ganz besonderen Zauber aller vier Jahreszeiten an den Wicklow Mountains in Irland. Die saisonalen und charakteristischen Kräuter und Früchte werden für jeden der vier Gins handgepflückt.
Im Spring Gin zeigen Süßdolde, Schlüsselblume, Wasserminze und Sauerampfer, wie das Jahr beginnt. Summer Gin ist wie eine sommerliche Wiese und enthält frühe Fruchtaromen von Holunderblüte, Wildrose, Kleeblüte, Wilder Himbeere, Brombeerblättern und Margarite. Im Herbst betreten reife, wilde Früchte und Beeren die Aromenpalette und so nimmt der Autumn Gin eine ganz eigene Fruchtigkeit von Holzapfel, Brombeeren, Holunder- und Vogelbeeren sowie Hagebutten und Mädesüßblüten an. Im ruhigen und besinnlichen Winter werden die Aromen dann würzig und kräftig mit Holzapfel, Hagebutte, Weißdorn- und Schlehbeeren sowie Douglasie. Eine einmalige Komposition von vier außergewöhnlichen Gins.
Auch in der Herstellung zeichnet sich die besondere Qualität der Glendalough Seasonal Gins ab: die Botanicals werden, anders als allgemein üblich, im frischen Zustand destilliert. Ohne Automatisierung werden nur geringe Chargen abgefüllt und so ist jeder Brennvorgang, wie der Allererste.",
        "manufacturer_title": "Glendalough",
        "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470005-glendalough-gin-set-170x340_1.png",
        "price": 29.95,
        "title": "Glendalough Gin-Set 4 Flaschen á 0,05 L",
        "url": "/glendalough-gin-set-470005.html",
      },
      "manufacturer_title": "Glendalough",
      "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470005-glendalough-gin-set-170x340_1.png",
      "price": 29.95,
      "title": "Glendalough Gin-Set 4 Flaschen á 0,05 L",
      "url": "/glendalough-gin-set-470005.html",
    },
    "id": "470005",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "4016701709339",
      "id": "562316",
      "longdesc": "Der trockene Durbach Weißburgunder von dem Weingut Markgraf von Baden wird ausgebaut auf Schloss Staufenberg, in der Ortenau. Als VDP.Ortswein ist dieser Vertreter ein Botschafter bester Böden. Das Weingut versteht sich darauf, die Terroireigenschaften im Wein herauszuarbeiten und folgt dabei stets seiner Philosophie »Fidelitas – Treue und Verlässlichkeit«. Daraus ergibt sich ein besonderer Wiedererkennungswert des Weines, da er vom Charakter seiner Ortslagen geprägt ist.   
Im Glas brilliert er in hellem strohgelben Gewand mit goldenen Reflexen. Sein typischer, feiner Duft nach reifer Birne und etwas Pfirsich macht Lust auf den ersten Schluck. Spritzig und filigran zugleich, zeigt er am Gaumen leichte Mineralität und ausgeprägte Saftigkeit. Die äußerst angenehme Säure gibt dem Wein Struktur. So erhält der hochwertige Wein ein harmonisches Gesamtbild. Ein klasse Exemplar aus dem wunderbaren Weinbaugebiet Baden.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "4016701709339",
        "id": "562316",
        "longdesc": "Der trockene Durbach Weißburgunder von dem Weingut Markgraf von Baden wird ausgebaut auf Schloss Staufenberg, in der Ortenau. Als VDP.Ortswein ist dieser Vertreter ein Botschafter bester Böden. Das Weingut versteht sich darauf, die Terroireigenschaften im Wein herauszuarbeiten und folgt dabei stets seiner Philosophie »Fidelitas – Treue und Verlässlichkeit«. Daraus ergibt sich ein besonderer Wiedererkennungswert des Weines, da er vom Charakter seiner Ortslagen geprägt ist.   
Im Glas brilliert er in hellem strohgelben Gewand mit goldenen Reflexen. Sein typischer, feiner Duft nach reifer Birne und etwas Pfirsich macht Lust auf den ersten Schluck. Spritzig und filigran zugleich, zeigt er am Gaumen leichte Mineralität und ausgeprägte Saftigkeit. Die äußerst angenehme Säure gibt dem Wein Struktur. So erhält der hochwertige Wein ein harmonisches Gesamtbild. Ein klasse Exemplar aus dem wunderbaren Weinbaugebiet Baden.",
        "manufacturer_title": "Weingut Markgraf von Baden",
        "manufacturerid": "b6558a8a65eb4db4e1c33b34b487c5f1",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/5/6/562316-mvb-durbach-weissburgunder_1.png",
        "price": 12.95,
        "title": "Markgraf von Baden Durbach Weißburgunder VDP.Ortswein 2018",
        "url": "/2016-markgraf-von-baden-staufenberg-weissburgunder-562316.html",
      },
      "manufacturer_title": "Weingut Markgraf von Baden",
      "manufacturerid": "b6558a8a65eb4db4e1c33b34b487c5f1",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/5/6/562316-mvb-durbach-weissburgunder_1.png",
      "price": 12.95,
      "title": "Markgraf von Baden Durbach Weißburgunder VDP.Ortswein 2018",
      "url": "/2016-markgraf-von-baden-staufenberg-weissburgunder-562316.html",
    },
    "id": "562316",
  },
]
`;

exports[`mergeProductsAndBanners() should correctly merge banners at configured positions 1`] = `
Array [
  Object {
    "isBanner": true,
    "link": "/foo",
    "position": "1",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "5055807407625",
      "id": "270115",
      "longdesc": "»The Botanist Islay Dry Gin« ist durch seine Machart und Herkunft in seiner Art einzigartig. Nirgendwo auf der Welt findet man Kräuter und Wildblumen in der Zusammensetzung, wie sie in diesem Gin verwendet werden. Sie alle stammen von der Insel Islay. Durch besonders schonende Destillation schafft der Master Distiller Jim McEwan, es die Essenz der Blüten und Kräuter einzufangen – den Duft und Charakter der wilden Hebrideninsel.
Quecksilberfarben schimmert er im Glas und verzaubert die Sinne mit seinen vielfältigen Nuancen. Sie reichen von süßem Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote bis hin zu Zitronen- und Orangenzeste. Ein ganzer Strauß an Wildblumen findet sich hier im Bukett wieder, wie der Duft von Distelnektar, wilder Minze und Ginster. »The Botanist Islay Dry Gin« duftet nach rauen Küsten und wilder Natur, dennoch ist er vollmundig und weich. Zu Beginn eher kühl, entwickelt er schließlich eine Balance aus Wärme und Komplexität.
Dank der 31 Botanicals, die für seine Herstellung behutsam destilliert werden wird der Gin zu einem komplexen, unverwechselbaren Genuss. Er ist ebenso wild und einzigartig, wie die Insel dessen Seele er in sich trägt. Die Magnum-Flasche betont die Ausstrahlung von Stärke und Freiheit zusätzlich. Ein Must-Have für jede Bar.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "5055807407625",
        "id": "270115",
        "longdesc": "»The Botanist Islay Dry Gin« ist durch seine Machart und Herkunft in seiner Art einzigartig. Nirgendwo auf der Welt findet man Kräuter und Wildblumen in der Zusammensetzung, wie sie in diesem Gin verwendet werden. Sie alle stammen von der Insel Islay. Durch besonders schonende Destillation schafft der Master Distiller Jim McEwan, es die Essenz der Blüten und Kräuter einzufangen – den Duft und Charakter der wilden Hebrideninsel.
Quecksilberfarben schimmert er im Glas und verzaubert die Sinne mit seinen vielfältigen Nuancen. Sie reichen von süßem Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote bis hin zu Zitronen- und Orangenzeste. Ein ganzer Strauß an Wildblumen findet sich hier im Bukett wieder, wie der Duft von Distelnektar, wilder Minze und Ginster. »The Botanist Islay Dry Gin« duftet nach rauen Küsten und wilder Natur, dennoch ist er vollmundig und weich. Zu Beginn eher kühl, entwickelt er schließlich eine Balance aus Wärme und Komplexität.
Dank der 31 Botanicals, die für seine Herstellung behutsam destilliert werden wird der Gin zu einem komplexen, unverwechselbaren Genuss. Er ist ebenso wild und einzigartig, wie die Insel dessen Seele er in sich trägt. Die Magnum-Flasche betont die Ausstrahlung von Stärke und Freiheit zusätzlich. Ein Must-Have für jede Bar.",
        "manufacturer_title": "Bruichladdich Distillery",
        "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270115-the-botanist-gin-1liter.png",
        "price": 74.95,
        "title": "The Botanist Islay Dry Gin in der Magnumflasche 46% vol. 1,5 Literflasche",
        "url": "/the-botanist-islay-dry-gin-46-1-5l-270115.html",
      },
      "manufacturer_title": "Bruichladdich Distillery",
      "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270115-the-botanist-gin-1liter.png",
      "price": 74.95,
      "title": "The Botanist Islay Dry Gin in der Magnumflasche 46% vol. 1,5 Literflasche",
      "url": "/the-botanist-islay-dry-gin-46-1-5l-270115.html",
    },
    "id": "270115",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "5055807400596",
      "id": "270107",
      "longdesc": "In der Farbe von schimmerndem Quecksilber erscheint »The Botanist Islay Dry Gin« wie ein kaum greifbares Mysterium. Seidenweich fließt er über Zunge und Gaumen wie kein anderer Gin. Im Duft ergeben sich vielschichtige Nuancen: süßes Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote, Zitronen- und Orangenzeste, ein Strauß Sommerblumen, Distelnektar, nussiger Ginster, wilde Minze und eine duftende Sommerwiese. Dieser Duft stammt direkt von der wilden Hebrideninsel mit all ihren schroffen Küsten und von Wildblumen und Heidekraut übersäten Moorlandschaften.
An keinem anderen Ort der Welt findet man diese Kräuter in dieser Ursprünglichkeit und Intensität. Master Distiller Jim McEwan wendet in unserer Lomond Pot Still, der weltweit einzigen ihrer Art, die traditionellen Extraktionskünste der großen Destillateure an. So wird langsam und besonders schonend die Essenz der Blüten und Kräuter eingefangen – der Duft und die Seele der wilden Natur Islays.
Am Gaumen vollmundig, weich und anfangs eher kühl entwickelt »The Botanist« eine wunderbare Wärme und Komplexität, die auf eine besonders langsame und schonende Destillation zurückzuführen ist. Ein luxuriöser Genuss, der mit seinen deutlichen Zitrusnoten verzaubert und die einzigartige Kombination aus 31 Botanicals und Gewürzen hervorragend unterstreicht. Die Essenz Islays in einem Gin: wilde Kräuter, Vielschichtigkeit, Komplexität und absolute Freiheit.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "5055807400596",
        "id": "270107",
        "longdesc": "In der Farbe von schimmerndem Quecksilber erscheint »The Botanist Islay Dry Gin« wie ein kaum greifbares Mysterium. Seidenweich fließt er über Zunge und Gaumen wie kein anderer Gin. Im Duft ergeben sich vielschichtige Nuancen: süßes Menthol, Apfelminze, Waldblüten, Wacholder, Koriander mit einer leichten Anisnote, Zitronen- und Orangenzeste, ein Strauß Sommerblumen, Distelnektar, nussiger Ginster, wilde Minze und eine duftende Sommerwiese. Dieser Duft stammt direkt von der wilden Hebrideninsel mit all ihren schroffen Küsten und von Wildblumen und Heidekraut übersäten Moorlandschaften.
An keinem anderen Ort der Welt findet man diese Kräuter in dieser Ursprünglichkeit und Intensität. Master Distiller Jim McEwan wendet in unserer Lomond Pot Still, der weltweit einzigen ihrer Art, die traditionellen Extraktionskünste der großen Destillateure an. So wird langsam und besonders schonend die Essenz der Blüten und Kräuter eingefangen – der Duft und die Seele der wilden Natur Islays.
Am Gaumen vollmundig, weich und anfangs eher kühl entwickelt »The Botanist« eine wunderbare Wärme und Komplexität, die auf eine besonders langsame und schonende Destillation zurückzuführen ist. Ein luxuriöser Genuss, der mit seinen deutlichen Zitrusnoten verzaubert und die einzigartige Kombination aus 31 Botanicals und Gewürzen hervorragend unterstreicht. Die Essenz Islays in einem Gin: wilde Kräuter, Vielschichtigkeit, Komplexität und absolute Freiheit.",
        "manufacturer_title": "Bruichladdich Distillery",
        "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270107-the-botanist-gin.png",
        "price": 34.95,
        "title": "The Botanist Islay Dry Gin 46% Vol.",
        "url": "/the-botanist-islay-dry-gin-270107.html",
      },
      "manufacturer_title": "Bruichladdich Distillery",
      "manufacturerid": "e0ca900755e8d4f4b3c4d61bb0d0bd0f",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/2/7/270107-the-botanist-gin.png",
      "price": 34.95,
      "title": "The Botanist Islay Dry Gin 46% Vol.",
      "url": "/the-botanist-islay-dry-gin-270107.html",
    },
    "id": "270107",
  },
  Object {
    "isBanner": true,
    "link": "/bar",
    "position": "4",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "735850483894",
      "id": "470006",
      "longdesc": "Für den Glendalough Wild Botanical Rose Gin werden nur handgelesene und frische Rosenblätter verwendet. Mit seltenen Wildrosen, duftenden \\"Heritage\\" Rosen sowie der alten, preisgekrönten Sorte \\"Damaszener Rose\\", die schon in der Antike angebaut wurde. In Kombination kreieren sie einen natürlich rosafarbenen und ausgesprochen blumigen Gin. Auch nach der Destillation wird er mit noch mehr Rosenblüten verfeinert, die nicht nur den Farbton, sondern auch die wundervollen Aromen zu intensivieren. Anfangs zeigt dieser Rose Gin zunächst sehr weiche Noten von Wacholder und frischen Rosen, anschließend eine großartige Kombination aus sanften und süßen Gewürzen, mildem Rosenwasser und einem Hauch Zitrus. Der erste traumhafte Eindruck mündet in einem langen Finish von Rosenblättern und rosa Pfeffer. Am besten lässt sich dieser Gin pur on the Rocks genießen.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "735850483894",
        "id": "470006",
        "longdesc": "Für den Glendalough Wild Botanical Rose Gin werden nur handgelesene und frische Rosenblätter verwendet. Mit seltenen Wildrosen, duftenden \\"Heritage\\" Rosen sowie der alten, preisgekrönten Sorte \\"Damaszener Rose\\", die schon in der Antike angebaut wurde. In Kombination kreieren sie einen natürlich rosafarbenen und ausgesprochen blumigen Gin. Auch nach der Destillation wird er mit noch mehr Rosenblüten verfeinert, die nicht nur den Farbton, sondern auch die wundervollen Aromen zu intensivieren. Anfangs zeigt dieser Rose Gin zunächst sehr weiche Noten von Wacholder und frischen Rosen, anschließend eine großartige Kombination aus sanften und süßen Gewürzen, mildem Rosenwasser und einem Hauch Zitrus. Der erste traumhafte Eindruck mündet in einem langen Finish von Rosenblättern und rosa Pfeffer. Am besten lässt sich dieser Gin pur on the Rocks genießen.",
        "manufacturer_title": "Glendalough",
        "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470006-glendalough-rose.png",
        "price": 27.95,
        "title": "Glendalough Wild Rose Gin 37,5% vol",
        "url": "/glendalough-rose-gin-470006.html",
      },
      "manufacturer_title": "Glendalough",
      "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470006-glendalough-rose.png",
      "price": 27.95,
      "title": "Glendalough Wild Rose Gin 37,5% vol",
      "url": "/glendalough-rose-gin-470006.html",
    },
    "id": "470006",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "735850138428",
      "id": "470005",
      "longdesc": "Das Set der exquisiten Glendalough Seasonal Gins zeigt Ihnen den ganz besonderen Zauber aller vier Jahreszeiten an den Wicklow Mountains in Irland. Die saisonalen und charakteristischen Kräuter und Früchte werden für jeden der vier Gins handgepflückt.
Im Spring Gin zeigen Süßdolde, Schlüsselblume, Wasserminze und Sauerampfer, wie das Jahr beginnt. Summer Gin ist wie eine sommerliche Wiese und enthält frühe Fruchtaromen von Holunderblüte, Wildrose, Kleeblüte, Wilder Himbeere, Brombeerblättern und Margarite. Im Herbst betreten reife, wilde Früchte und Beeren die Aromenpalette und so nimmt der Autumn Gin eine ganz eigene Fruchtigkeit von Holzapfel, Brombeeren, Holunder- und Vogelbeeren sowie Hagebutten und Mädesüßblüten an. Im ruhigen und besinnlichen Winter werden die Aromen dann würzig und kräftig mit Holzapfel, Hagebutte, Weißdorn- und Schlehbeeren sowie Douglasie. Eine einmalige Komposition von vier außergewöhnlichen Gins.
Auch in der Herstellung zeichnet sich die besondere Qualität der Glendalough Seasonal Gins ab: die Botanicals werden, anders als allgemein üblich, im frischen Zustand destilliert. Ohne Automatisierung werden nur geringe Chargen abgefüllt und so ist jeder Brennvorgang, wie der Allererste.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "735850138428",
        "id": "470005",
        "longdesc": "Das Set der exquisiten Glendalough Seasonal Gins zeigt Ihnen den ganz besonderen Zauber aller vier Jahreszeiten an den Wicklow Mountains in Irland. Die saisonalen und charakteristischen Kräuter und Früchte werden für jeden der vier Gins handgepflückt.
Im Spring Gin zeigen Süßdolde, Schlüsselblume, Wasserminze und Sauerampfer, wie das Jahr beginnt. Summer Gin ist wie eine sommerliche Wiese und enthält frühe Fruchtaromen von Holunderblüte, Wildrose, Kleeblüte, Wilder Himbeere, Brombeerblättern und Margarite. Im Herbst betreten reife, wilde Früchte und Beeren die Aromenpalette und so nimmt der Autumn Gin eine ganz eigene Fruchtigkeit von Holzapfel, Brombeeren, Holunder- und Vogelbeeren sowie Hagebutten und Mädesüßblüten an. Im ruhigen und besinnlichen Winter werden die Aromen dann würzig und kräftig mit Holzapfel, Hagebutte, Weißdorn- und Schlehbeeren sowie Douglasie. Eine einmalige Komposition von vier außergewöhnlichen Gins.
Auch in der Herstellung zeichnet sich die besondere Qualität der Glendalough Seasonal Gins ab: die Botanicals werden, anders als allgemein üblich, im frischen Zustand destilliert. Ohne Automatisierung werden nur geringe Chargen abgefüllt und so ist jeder Brennvorgang, wie der Allererste.",
        "manufacturer_title": "Glendalough",
        "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470005-glendalough-gin-set-170x340_1.png",
        "price": 29.95,
        "title": "Glendalough Gin-Set 4 Flaschen á 0,05 L",
        "url": "/glendalough-gin-set-470005.html",
      },
      "manufacturer_title": "Glendalough",
      "manufacturerid": "ab5efbe6293ed308144623204f534c3d",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/4/7/470005-glendalough-gin-set-170x340_1.png",
      "price": 29.95,
      "title": "Glendalough Gin-Set 4 Flaschen á 0,05 L",
      "url": "/glendalough-gin-set-470005.html",
    },
    "id": "470005",
  },
  Object {
    "fields": Object {
      "attributestr": Array [
        Object {
          "id": "f24431ce9f1b8885678b1ed611c4c214",
          "title": "availability",
          "value": "in stock",
        },
      ],
      "datatype": "makaira-productgroup",
      "ean": "4016701709339",
      "id": "562316",
      "longdesc": "Der trockene Durbach Weißburgunder von dem Weingut Markgraf von Baden wird ausgebaut auf Schloss Staufenberg, in der Ortenau. Als VDP.Ortswein ist dieser Vertreter ein Botschafter bester Böden. Das Weingut versteht sich darauf, die Terroireigenschaften im Wein herauszuarbeiten und folgt dabei stets seiner Philosophie »Fidelitas – Treue und Verlässlichkeit«. Daraus ergibt sich ein besonderer Wiedererkennungswert des Weines, da er vom Charakter seiner Ortslagen geprägt ist.   
Im Glas brilliert er in hellem strohgelben Gewand mit goldenen Reflexen. Sein typischer, feiner Duft nach reifer Birne und etwas Pfirsich macht Lust auf den ersten Schluck. Spritzig und filigran zugleich, zeigt er am Gaumen leichte Mineralität und ausgeprägte Saftigkeit. Die äußerst angenehme Säure gibt dem Wein Struktur. So erhält der hochwertige Wein ein harmonisches Gesamtbild. Ein klasse Exemplar aus dem wunderbaren Weinbaugebiet Baden.",
      "makaira-product": Object {
        "attributestr": Array [
          Object {
            "id": "f24431ce9f1b8885678b1ed611c4c214",
            "title": "availability",
            "value": "in stock",
          },
        ],
        "datatype": "makaira-product",
        "ean": "4016701709339",
        "id": "562316",
        "longdesc": "Der trockene Durbach Weißburgunder von dem Weingut Markgraf von Baden wird ausgebaut auf Schloss Staufenberg, in der Ortenau. Als VDP.Ortswein ist dieser Vertreter ein Botschafter bester Böden. Das Weingut versteht sich darauf, die Terroireigenschaften im Wein herauszuarbeiten und folgt dabei stets seiner Philosophie »Fidelitas – Treue und Verlässlichkeit«. Daraus ergibt sich ein besonderer Wiedererkennungswert des Weines, da er vom Charakter seiner Ortslagen geprägt ist.   
Im Glas brilliert er in hellem strohgelben Gewand mit goldenen Reflexen. Sein typischer, feiner Duft nach reifer Birne und etwas Pfirsich macht Lust auf den ersten Schluck. Spritzig und filigran zugleich, zeigt er am Gaumen leichte Mineralität und ausgeprägte Saftigkeit. Die äußerst angenehme Säure gibt dem Wein Struktur. So erhält der hochwertige Wein ein harmonisches Gesamtbild. Ein klasse Exemplar aus dem wunderbaren Weinbaugebiet Baden.",
        "manufacturer_title": "Weingut Markgraf von Baden",
        "manufacturerid": "b6558a8a65eb4db4e1c33b34b487c5f1",
        "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/5/6/562316-mvb-durbach-weissburgunder_1.png",
        "price": 12.95,
        "title": "Markgraf von Baden Durbach Weißburgunder VDP.Ortswein 2018",
        "url": "/2016-markgraf-von-baden-staufenberg-weissburgunder-562316.html",
      },
      "manufacturer_title": "Weingut Markgraf von Baden",
      "manufacturerid": "b6558a8a65eb4db4e1c33b34b487c5f1",
      "picture_url_main": "https://www.ludwig-von-kapff.de/media/catalog/product/5/6/562316-mvb-durbach-weissburgunder_1.png",
      "price": 12.95,
      "title": "Markgraf von Baden Durbach Weißburgunder VDP.Ortswein 2018",
      "url": "/2016-markgraf-von-baden-staufenberg-weissburgunder-562316.html",
    },
    "id": "562316",
  },
]
`;
